# transfer_function

./: Cargo.toml  h.txt  h0(z)_a.txt  h0(z)_b.txt
src/: coefficient.rs  compute.rs  is_neg.rs  lib.rs  main.rs  partial_one.rs  partial_zero.rs  polynomial.rs  powered_product.rs  simplify.rs  sym.rs  transfer_function.rs  weighted_sum.rs
src/transfer_function/: tf_s.rs  tf_z.rs
